--- a/index.html
+++ b/index.html
@@ -92,10 +92,14 @@
     <footer>
       <div class="attribution">
         Challenge by
-        <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
+        <a
+          href="https://www.frontendmentor.io?ref=challenge"
+          target="_blank"
+          class="text"
           >Frontend Mentor</a
         >. Coded by
-        <a href="https://github.com/kxnzx" target="_blank">kxnzx</a>.
+        <a href="https://github.com/kxnzx" target="_blank" class="text">kxnzx</a
+        >.
       </div>
     </footer>
   </body>
